# UPS_ESP32_tinySrv

./: .gitignore  CMakeLists.txt  CONFIGURATION.md  MANUAL_LEITURA_UPS.md  README.md  partitions.csv  sdkconfig  sdkconfig.example  sdkconfig.old
.github/workflows/: release.yml
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.example  idf_component.yml  led_status.c  led_status.h  log_buffer.c  log_buffer.h  main.c  ups.c  ups.h  ups_mqtt.c  ups_mqtt.h  web_server.c  web_server.h  web_ui.h  wifi.c  wifi.h  wifi_config_ui.h  wifi_manager.c  wifi_manager.h
